--- a/cx.html
+++ b/cx.html
@@ -2324,8 +2324,11 @@ function main() {
     title="shift[T](x: var seq[T]; zz: Natural = 0): T"><wbr />shift<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#spellInteger,int64"
     title="spellInteger(n: int64): string"><wbr />spell<wbr />Integer<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#spellFloat,float64,string,string"
-    title="spellFloat(n: float64; sep: string = &quot;.&quot;; sepname: string = &quot; dot &quot;): string"><wbr />spell<wbr />Float<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#spellInteger2,string"
+    title="spellInteger2(n: string): string"><wbr />spell<wbr />Integer2<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#spellFloat,float64,bool,string,string"
+    title="spellFloat(n: float64; currency: bool = false; sep: string = &quot;.&quot;;
+           sepname: string = &quot; dot &quot;): string"><wbr />spell<wbr />Float<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#showStats,RunningStat,int,int"
     title="showStats(x: RunningStat; n: int = 3; xpos: int = 1)"><wbr />show<wbr />Stats<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#showRegression,seq[],seq[],int,int"
@@ -2515,7 +2518,7 @@ function main() {
   </div>
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
-  <p class="module-desc">{.noforward: on.}   # future feature<pre>
+  <p class="module-desc">{.noforward: on.}   # future feature hopefully<pre>
 Library     : nimcx.nim
 
 Module      : cx.nim
@@ -4934,7 +4937,7 @@ forward declaration
                     <span class="Identifier">centered</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">;</span> <span class="Identifier">styled</span><span class="Other">:</span> <span class="Identifier">set</span><span class="Other">[</span><span class="Identifier">Style</span><span class="Other">]</span> <span class="Other">=</span> <span class="Other">{</span><span class="Other">}</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>printLnBiCol</p>
-<p>a newer version of printLnBiCol  currently under development changes: sep moved to behind colors in parameter ordering and input can be varargs which gives much better flexibility if varargs are to be printed all parameters need to be specified.</p>
+<p>changes to prev. versions: sep moved to behind colors in parameter ordering and input can be varargs which gives much better flexibility if varargs are to be printed all parameters need to be specified.</p>
 <p>default seperator = &quot;:&quot;  if not found we execute printLn with available params</p>
 <pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
 
@@ -5279,7 +5282,8 @@ getNextMonday<pre class="listing"><span class="Identifier">echo</span>  <span cl
 <p>k parameter specifies character distance reasonable values are 7,8,9,10 . Default = 7</p>
 <p>also note that depending on terminal width only a limited number of chars can be displayed</p>
 <pre class="listing"><span class="Identifier">printBigLetters</span><span class="Punctuation">(</span><span class="StringLit">&quot;ABA###RR#3&quot;</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="DecNumber">1</span><span class="Punctuation">)</span>
-<span class="Identifier">printBigLetters</span><span class="Punctuation">(</span><span class="StringLit">&quot;#&quot;</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="DecNumber">1</span><span class="Punctuation">)</span>   <span class="Comment"># the '#' char is used to denote a blank space or to overwrite</span></pre>
+<span class="Identifier">printBigLetters</span><span class="Punctuation">(</span><span class="StringLit">&quot;#&quot;</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="DecNumber">1</span><span class="Punctuation">)</span>   <span class="Comment"># the '#' char is used to denote a blank space or to overwrite</span>
+<span class="Identifier">printBigLetters</span><span class="Punctuation">(</span><span class="StringLit">&quot;Nim#DOES#IT#AGAIN&quot;</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="DecNumber">1</span><span class="Punctuation">,</span><span class="Identifier">fun</span><span class="Operator">=</span><span class="Identifier">true</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="printNimSxR"><a name="printNimSxR,seq[string],string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printNimSxR</span><span class="Other">(</span><span class="Identifier">nimsx</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma">
@@ -5677,16 +5681,28 @@ coltype examples : &quot;red&quot;,&quot;blue&quot;,&quot;medium&quot;,&quot;dar
 forward declaration
 
 </dd>
-<dt id="spellFloat"><a name="spellFloat,float64,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">spellFloat</span><span class="Other">(</span><span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">float64</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;.&quot;</span><span class="Other">;</span> <span class="Identifier">sepname</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot; dot &quot;</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma">
+<dt id="spellInteger2"><a name="spellInteger2,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">spellInteger2</span><span class="Other">(</span><span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span>
+                                    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+<p>spellInteger2</p>
+<p>used in after comma part of a float , we just put out the numbers one by one</p>
+<p>code adapted from rosettacode and slightly updated to make it actually compile </p>
+
+
+</dd>
+<dt id="spellFloat"><a name="spellFloat,float64,bool,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">spellFloat</span><span class="Other">(</span><span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">float64</span><span class="Other">;</span> <span class="Identifier">currency</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;.&quot;</span><span class="Other">;</span>
+               <span class="Identifier">sepname</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot; dot &quot;</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>spellFloat</p>
-<p>writes out a float number in english sep and sepname can be adjusted as needed default sep = &quot;.&quot; default sepname = &quot; dot &quot;</p>
+<p>writes out a float number in english with up to 14 positions after the dot currency denotes spelling of an amount sep and sepname can be adjusted as needed default sep = &quot;.&quot; default sepname = &quot; dot &quot;</p>
 <pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
 <span class="Identifier">printLn</span> <span class="Identifier">spellFloat</span><span class="Punctuation">(</span><span class="FloatNumber">0.00</span><span class="Punctuation">)</span>
 <span class="Identifier">printLn</span> <span class="Identifier">spellFloat</span><span class="Punctuation">(</span><span class="DecNumber">234</span><span class="Punctuation">)</span>
-<span class="Identifier">printLn</span> <span class="Identifier">spellFloat</span><span class="Punctuation">(</span><span class="Operator">-</span><span class="FloatNumber">2311.345</span><span class="Punctuation">)</span></pre>
+<span class="Identifier">printLn</span> <span class="Identifier">spellFloat</span><span class="Punctuation">(</span><span class="Operator">-</span><span class="FloatNumber">2311.345</span><span class="Punctuation">)</span>
+<span class="Identifier">println</span> <span class="Identifier">spellFloat</span><span class="Punctuation">(</span><span class="FloatNumber">5212311.00</span><span class="Punctuation">)</span><span class="Operator">.</span><span class="Identifier">replace</span><span class="Punctuation">(</span><span class="StringLit">&quot;dot&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;and&quot;</span><span class="Punctuation">)</span> <span class="Operator">&amp;</span> <span class="StringLit">&quot;hundreds&quot;</span>
+<span class="Identifier">printLn</span> <span class="Identifier">spellFloat</span><span class="Punctuation">(</span><span class="FloatNumber">122311.34</span><span class="Punctuation">,</span><span class="Identifier">true</span><span class="Punctuation">)</span><span class="Operator">.</span><span class="Identifier">replace</span><span class="Punctuation">(</span><span class="StringLit">&quot;dot&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;dollars and&quot;</span><span class="Punctuation">)</span> <span class="Operator">&amp;</span> <span class="StringLit">&quot; cents&quot;</span></pre>
 
 </dd>
 <dt id="showStats"><a name="showStats,RunningStat,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showStats</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">RunningStat</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">3</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma">
@@ -6431,7 +6447,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
 
 <span class="Identifier">infoproc</span><span class="Punctuation">(</span><span class="Identifier">test1</span><span class="Punctuation">(</span><span class="StringLit">&quot;zz&quot;</span><span class="Punctuation">,</span><span class="DecNumber">1234</span><span class="Punctuation">,</span><span class="FloatNumber">789.88</span><span class="Punctuation">)</span><span class="Punctuation">)</span>
 <span class="Identifier">infoproc</span><span class="Punctuation">:</span>
-    <span class="Identifier">printLnBiCol</span><span class="Punctuation">(</span><span class="Identifier">fmtx</span><span class="Punctuation">(</span><span class="Punctuation">[</span><span class="StringLit">&quot;&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;&quot;</span><span class="Punctuation">]</span><span class="Punctuation">,</span><span class="StringLit">&quot;Test2 output  : &quot;</span><span class="Punctuation">,</span><span class="Identifier">rightarrow</span> <span class="Operator">&amp;</span> <span class="Identifier">spaces</span><span class="Punctuation">(</span><span class="DecNumber">1</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">test2</span><span class="Punctuation">(</span><span class="StringLit">&quot;nice&quot;</span><span class="Punctuation">,</span><span class="DecNumber">2000</span><span class="Punctuation">)</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">colLeft</span> <span class="Operator">=</span> <span class="Identifier">cyan</span><span class="Punctuation">,</span><span class="Identifier">colRight</span><span class="Operator">=</span><span class="Identifier">gold</span><span class="Punctuation">)</span>
+    <span class="Identifier">printLnBiCol</span><span class="Punctuation">(</span><span class="Identifier">fmtx</span><span class="Punctuation">(</span><span class="Punctuation">[</span><span class="StringLit">&quot;&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;&quot;</span><span class="Punctuation">]</span><span class="Punctuation">,</span><span class="StringLit">&quot;Test2 output  : &quot;</span><span class="Punctuation">,</span><span class="Identifier">rightarrow</span> <span class="Operator">&amp;</span> <span class="Identifier">spaces</span><span class="Punctuation">(</span><span class="DecNumber">1</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">test2</span><span class="Punctuation">(</span><span class="StringLit">&quot;nice&quot;</span><span class="Punctuation">,</span><span class="DecNumber">2000</span><span class="Punctuation">)</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">colLeft</span> <span class="Operator">=</span> <span class="Identifier">cyan</span><span class="Punctuation">,</span><span class="Identifier">colRight</span><span class="Operator">=</span><span class="Identifier">gold</span><span class="Punctuation">,</span><span class="StringLit">&quot;:&quot;</span><span class="Punctuation">,</span><span class="DecNumber">0</span><span class="Punctuation">,</span><span class="Identifier">false</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Punctuation">}</span><span class="Punctuation">)</span>
 <span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
 
 </dd>
@@ -6462,7 +6478,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-09-07 12:39:58 UTC</small>
+        <small>Made with Nim. Generated: 2017-09-09 22:26:02 UTC</small>
       </div>
     </div>
   </div>
