--- a/libFinHk.html
+++ b/libFinHk.html
@@ -1434,7 +1434,7 @@ function main() {
 
 </dd>
 <dt id="doFinishHk"><a name="doFinishHk,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">doFinishHk</span><span class="Other">(</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">OverflowError</span><span class="Other">,</span>
-                          <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span>
+                          <span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">OSError</span><span class="Other">]</span><span class="Other">,</span>
                   <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">,</span> <span class="Identifier">ReadIOEffect</span><span class="Other">,</span> <span class="Identifier">TimeEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>doFinish</p>
@@ -1454,7 +1454,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-09-05 20:48:25 UTC</small>
+        <small>Made with Nim. Generated: 2017-09-14 12:09:26 UTC</small>
       </div>
     </div>
   </div>
