--- a/cx.html
+++ b/cx.html
@@ -2433,8 +2433,8 @@ function main() {
     title="doFinish()"><wbr />do<wbr />Finish<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#handler,"
     title="handler()"><wbr />handler<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#docxm,"
-    title="docxm()"><wbr />docxm<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#doCxEnd,"
+    title="doCxEnd()"><wbr />do<wbr />Cx<wbr />End<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -6258,10 +6258,9 @@ printNimcx<blockquote><p>experiments in block font building , default is center 
 
 
 </dd>
-<dt id="docxm"><a name="docxm,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">docxm</span><span class="Other">(</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">OSError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">OverflowError</span><span class="Other">,</span>
-                     <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">ReadIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">,</span>
-                                       <span class="Identifier">TimeEffect</span><span class="Other">,</span> <span class="Identifier">ReadEnvEffect</span><span class="Other">,</span> <span class="Identifier">ReadDirEffect</span><span class="Other">,</span>
-                                       <span class="Identifier">ExecIOEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dt id="doCxEnd"><a name="doCxEnd,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">doCxEnd</span><span class="Other">(</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">OSError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">OverflowError</span><span class="Other">,</span>
+                       <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">ReadIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">,</span>
+    <span class="Identifier">TimeEffect</span><span class="Other">,</span> <span class="Identifier">ReadEnvEffect</span><span class="Other">,</span> <span class="Identifier">ReadDirEffect</span><span class="Other">,</span> <span class="Identifier">ExecIOEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 
 
@@ -6360,7 +6359,7 @@ eg. &quot;mediumslateblue&quot;
 </dd>
 <dt id="randCol2"><a name="randCol2.t,string"></a><pre><span class="Keyword">template</span> <span class="Identifier">randCol2</span><span class="Other">(</span><span class="Identifier">coltype</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span></pre></dt>
 <dd>
-<pre>randCol
+<pre>randCol2    -- experimental
 
 returns a random color based on a palette
 
@@ -6866,7 +6865,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-09-17 21:41:35 UTC</small>
+        <small>Made with Nim. Generated: 2017-09-18 13:37:13 UTC</small>
       </div>
     </div>
   </div>
