--- a/cx.html
+++ b/cx.html
@@ -1402,8 +1402,6 @@ function main() {
     title="intervalyears(startDate, endDate: string): float"><wbr />intervalyears<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#compareDates,string,string"
     title="compareDates(startDate, endDate: string): int"><wbr />compare<wbr />Dates<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#dayOfWeekJulian,string"
-    title="dayOfWeekJulian(datestr: string): string"><wbr />day<wbr />Of<wbr />Week<wbr />Julian<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#plusDays,string,int"
     title="plusDays(aDate: string; days: int): string"><wbr />plus<wbr />Days<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#minusDays,string,int"
@@ -1420,8 +1418,9 @@ function main() {
     title="dayofweek(datestr: string): string"><wbr />dayofweek<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#createSeqDate,string,int"
     title="createSeqDate(fromDate: string; days: int = 1): seq[string]"><wbr />create<wbr />Seq<wbr />Date<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#getRndDate,"
-    title="getRndDate(): string"><wbr />get<wbr />Rnd<wbr />Date<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#getRndDate,int,int"
+    title="getRndDate(minyear: int = parseInt(year(getDateStr())) - 50;
+           maxyear: int = parseInt(year(getDateStr())) + 50): string"><wbr />get<wbr />Rnd<wbr />Date<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#printSlimNumber,string,string,string,int"
     title="printSlimNumber(anumber: string; fgr: string = yellowgreen; bgr: string = black;
                 xpos: int = 1)"><wbr />print<wbr />Slim<wbr />Number<span class="attachedType" style="visibility:hidden"></span></a></li>
@@ -2688,16 +2687,6 @@ interval procs returns time elapsed between two dates in secs,hours etc.
 
 
 </dd>
-<dt id="dayOfWeekJulian"><a name="dayOfWeekJulian,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">dayOfWeekJulian</span><span class="Other">(</span><span class="Identifier">datestr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma">
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
-<dd>
-<p>dayOfWeekJulian</p>
-<p>returns the day of the week of a date given in format yyyy-MM-dd as string</p>
-<p>actually starts to fail with 2100-03-01 which shud be a monday but this proc says tuesday</p>
-<p>due to shortcomings in the julian calendar .</p>
-
-
-</dd>
 <dt id="plusDays"><a name="plusDays,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">plusDays</span><span class="Other">(</span><span class="Identifier">aDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">days</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">IOError</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">TimeEffect</span><span class="Other">,</span> <span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
@@ -2782,13 +2771,15 @@ getNextMonday<pre class="listing"><span class="Identifier">echo</span>  <span cl
 
 
 </dd>
-<dt id="getRndDate"><a name="getRndDate,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRndDate</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">]</span><span class="Other">,</span>
-                         <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dt id="getRndDate"><a name="getRndDate,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRndDate</span><span class="Other">(</span><span class="Identifier">minyear</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">parseInt</span><span class="Other">(</span><span class="Identifier">year</span><span class="Other">(</span><span class="Identifier">getDateStr</span><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span><span class="Other">)</span> <span class="Operator">-</span> <span class="DecNumber">50</span><span class="Other">;</span>
+               <span class="Identifier">maxyear</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">parseInt</span><span class="Other">(</span><span class="Identifier">year</span><span class="Other">(</span><span class="Identifier">getDateStr</span><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span><span class="Other">)</span> <span class="Operator">+</span> <span class="DecNumber">50</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma">
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
-<p>getRandomDate</p>
-<p>gets a randomdate between 1900-01-01 and 2099-12-31</p>
-<p>larger dates not supported</p>
-
+<p>getRndDate</p>
+<p>returns a valid random date between 1900 and 3001 in format 2017-12-31</p>
+<p>default currently set to  between  +/- 50 years of today</p>
+<pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
+<span class="Identifier">loopy2</span><span class="Punctuation">(</span><span class="DecNumber">0</span><span class="Punctuation">,</span><span class="DecNumber">100</span><span class="Punctuation">)</span><span class="Punctuation">:</span> <span class="Identifier">echo</span> <span class="Identifier">getRndDate</span><span class="Punctuation">(</span><span class="DecNumber">2016</span><span class="Punctuation">,</span><span class="DecNumber">2025</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="printSlimNumber"><a name="printSlimNumber,string,string,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printSlimNumber</span><span class="Other">(</span><span class="Identifier">anumber</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">fgr</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span> <span class="Identifier">bgr</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">black</span><span class="Other">;</span>
@@ -4269,7 +4260,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-09-28 15:41:01 UTC</small>
+        <small>Made with Nim. Generated: 2017-09-28 20:49:38 UTC</small>
       </div>
     </div>
   </div>
