--- a/cx.html
+++ b/cx.html
@@ -1865,7 +1865,7 @@ Usage       : import nimcx
 
 Project     : `NimCx &lt;https://github.com/qqtop/NimCx&gt;`_
 
-Docs        : `Documentation &lt;https://qqtop.github.io/cx.html'_
+Docs        : `Documentation &lt;https://qqtop.github.io/cx.html&gt;`_
 
 Tested      : OpenSuse Tumbleweed , Ubuntu 16.04 LTS
               
@@ -4392,7 +4392,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-10-06 22:23:45 UTC</small>
+        <small>Made with Nim. Generated: 2017-10-06 22:44:44 UTC</small>
       </div>
     </div>
   </div>
