--- a/cx.html
+++ b/cx.html
@@ -1370,7 +1370,7 @@ function main() {
   <li><a class="reference" href="#printHL,string,string,string"
     title="printHL(s: string; substr: string; col: string = termwhite)"><wbr />print<wbr />HL<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#printLnHL,string,string,string"
-    title="printLnHL(s: string; substr: string; col: string = termwhite)"><wbr />print<wbr />Ln<wbr />HL<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="printLnHL(s: string; substr: string; col: string = lightcyan)"><wbr />print<wbr />Ln<wbr />HL<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#cecho,string,varargs[string,]"
     title="cecho(col: string; ggg: varargs[string, `$`] = @[&quot;&quot;])"><wbr />cecho<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#cechoLn,string,varargs[string,]"
@@ -2552,7 +2552,7 @@ forward declaration
 
 
 </dd>
-<dt id="printLnHL"><a name="printLnHL,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnHL</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">substr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma">
+<dt id="printLnHL"><a name="printLnHL,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnHL</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">substr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">lightcyan</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>printLnHL</p>
@@ -4392,7 +4392,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-10-08 12:52:01 UTC</small>
+        <small>Made with Nim. Generated: 2017-10-08 21:36:23 UTC</small>
       </div>
     </div>
   </div>
